<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="16dp">


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/indicator_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:indicatorInset="100dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/image_pill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_pill"
                app:tint="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_post_height"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_person"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_pill"
                tools:src="@drawable/nia"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_camera"
                style="@style/CenterIconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:icon="@drawable/ic_camera"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/button_file"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_profile" />

            <com.google.android.material.button.MaterialButton
                style="@style/CenterIconButton"
                android:id="@+id/button_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_gallery"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_camera"
                app:layout_constraintTop_toTopOf="@id/button_camera"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_camera"
                app:layout_constraintEnd_toEndOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_update"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_mail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>